--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "http://simonprovost.github.io/",
   "name": "my_website",
   "version": "0.1.0",
   "private": true,
@@ -11,6 +10,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-horizontal-scrolling-menu": "^2.7.0",
+    "react-router-dom": "^6.1.1",
     "react-scripts": "4.0.3",
     "react-swipeable": "^6.2.0",
     "web-vitals": "^1.0.1"
