--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "@comment": {
+    "run_github_pages": "http://simonprovost.github.io/",
+    "run_local": ""
+  },
   "name": "my_website",
   "version": "0.1.0",
   "private": true,
